Some design fixes

--- a/Collectors/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -13,9 +13,10 @@
     }
 }
 
-<h2>@SharedLocalizer["ManageAccount"]</h2>
 
-<div>
+
+<div class="container">
+    <h2>@SharedLocalizer["ManageAccount"]</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
