--- a/Collectors/Views/Items/Edit.cshtml
+++ b/Collectors/Views/Items/Edit.cshtml
@@ -6,69 +6,71 @@
 @{
     IFieldManager fieldManager = new FieldManager(ViewBag.Item);
 }
-<h2 class="text-center m-4">@SharedLocalizer["Edit your item"]</h2>
-<form method="post" class="needs-validation" novalidate>
-    <input asp-for="@Model.Tags" id="tags" value="@string.Join(',',ViewBag.Tags)" type="hidden" />
-    <input asp-for="CollectionId" value="@Model.CollectionId" type="hidden" />
-    <input name="itemId" value="@ViewBag.Item.Id" type="hidden" />
-    <div class="form-row white">
-        <div class="col-md-4 mb-3">
-            <label>
-                @SharedLocalizer["Item name"]:
-            </label>
-            <input asp-for="@Model.Name" type="text" class="form-control" id="validationCustom01"
-                   placeholder="@SharedLocalizer["Item name"]" value="@ViewBag.Item.Name" required />
-            <div class="valid-feedback">
-                @SharedLocalizer["Looks good!"]
+<div class="container">
+    <h2 class="text-center m-4">@SharedLocalizer["Edit your item"]</h2>
+    <form method="post" class="needs-validation" novalidate>
+        <input asp-for="@Model.Tags" id="tags" value="@string.Join(',',ViewBag.Tags)" type="hidden" />
+        <input asp-for="CollectionId" value="@Model.CollectionId" type="hidden" />
+        <input name="itemId" value="@ViewBag.Item.Id" type="hidden" />
+        <div class="form-row white">
+            <div class="col-md-4 mb-3">
+                <label>
+                    @SharedLocalizer["Item name"]:
+                </label>
+                <input asp-for="@Model.Name" type="text" class="form-control" id="validationCustom01"
+                       placeholder="@SharedLocalizer["Item name"]" value="@ViewBag.Item.Name" required />
+                <div class="valid-feedback">
+                    @SharedLocalizer["Looks good!"]
+                </div>
+            </div>
+            <div class="col-md-8 mb-3">
+                <label for="validationCustomTags">@SharedLocalizer["Add some tags for your item"]</label>
+                <input type="text" class="form-control mb-4 text-left w-100" name="input-custom-dropdown"
+                       placeholder="@SharedLocalizer["write tags here"]" value="@ViewBag.Item.Tags"
+                       id="validationCustomTags" aria-describedby="inputGroupPrepend" required />
+                <div class="valid-feedback">
+                    @SharedLocalizer["Looks good!"]
+                </div>
+                <div class="invalid-feedback">
+                    @SharedLocalizer["choose a tags for your item"]
+                </div>
             </div>
         </div>
-        <div class="col-md-8 mb-3">
-            <label for="validationCustomTags">@SharedLocalizer["Add some tags for your item"]</label>
-            <input type="text" class="form-control mb-4 text-left w-100" name="input-custom-dropdown"
-                   placeholder="@SharedLocalizer["write tags here"]" value="@ViewBag.Item.Tags"
-                   id="validationCustomTags" aria-describedby="inputGroupPrepend" required />
-            <div class="valid-feedback">
-                @SharedLocalizer["Looks good!"]
-            </div>
-            <div class="invalid-feedback">
-                @SharedLocalizer["choose a tags for your item"]
-            </div>
-        </div>
-    </div>
-    @{
-        for (int i = 0; i < Model.AdditionalFieldsNames.Count; i += 3)
-        {
-            <div class="form-row white">
-                @for (int j = i; j < i + 3 && j < Model.AdditionalFieldsNames.Count; j++)
-                {
-                    int index = Model.AdditionalFieldsIndexes[j];
-                    string name = FieldManager.GetTypeByIndex(index);
-                    <div class="col-md-4 mb-3">
-                        <label asp-for="@Model.AdditionalFieldsValues[j]">
-                            @Model.AdditionalFieldsNames[j]
-                        </label>
-                        @if (name != "textarea")
-                        {
-                            <input class="form-control m-2"
-                                   asp-for="@Model.AdditionalFieldsValues[j]" type="@name"
-                                   value="@fieldManager.GetFieldByIndex(index)" />
-                        }
-                        else
-                        {
-                            <textarea rows="5" cols="40" asp-for="@Model.AdditionalFieldsValues[j]"
-                                      value="@fieldManager.GetFieldByIndex(index)" class="form-control m-2">
+        @{
+            for (int i = 0; i < Model.AdditionalFieldsNames.Count; i += 3)
+            {
+                <div class="form-row white">
+                    @for (int j = i; j < i + 3 && j < Model.AdditionalFieldsNames.Count; j++)
+                    {
+                        int index = Model.AdditionalFieldsIndexes[j];
+                        string name = FieldManager.GetTypeByIndex(index);
+                        <div class="col-md-4 mb-3">
+                            <label asp-for="@Model.AdditionalFieldsValues[j]">
+                                @Model.AdditionalFieldsNames[j]
+                            </label>
+                            @if (name != "textarea")
+                            {
+                                <input class="form-control m-2"
+                                       asp-for="@Model.AdditionalFieldsValues[j]" type="@name"
+                                       value="@fieldManager.GetFieldByIndex(index)" />
+                            }
+                            else
+                            {
+                                <textarea rows="5" cols="40" asp-for="@Model.AdditionalFieldsValues[j]"
+                                          value="@fieldManager.GetFieldByIndex(index)" class="form-control m-2">
                                 </textarea>
-                        }
-                        <input type="hidden" value="@index" asp-for="AdditionalFieldsIndexes" />
-                    </div>
-                }
-            </div>
+                            }
+                            <input type="hidden" value="@index" asp-for="AdditionalFieldsIndexes" />
+                        </div>
+                    }
+                </div>
+            }
         }
-    }
-    <button  id="sentButton" asp-action="Save" class="btn btn-primary btn-sm" type="submit">
-        @SharedLocalizer["Finish"]
-    </button>
-</form>
+        <button id="sentButton" asp-action="Save" class="btn btn-primary btn-sm" type="submit">
+            @SharedLocalizer["Finish"]
+        </button>
+    </form>
+</div>
 @section scripts{
     <script src="~/js/tags.js"></script>
     <script src="~/js/validate.js"></script>
