--- a/Collectors/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewData["Title"] = "Forgot password confirmation";
 }
-
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
-
+<div class="container">
+    <h1>@ViewData["Title"]</h1>
+    <p>
+        Please check your email to reset your password.
+    </p>
+</div>
