--- a/Collectors/Views/Collections/Create.cshtml
+++ b/Collectors/Views/Collections/Create.cshtml
@@ -4,60 +4,59 @@
 @inject IViewLocalizer Localizer;
 @{
     var themes = Enum.GetValues(typeof(CollectionTheme));
-    string[] fieldsTypes = { "Integer fields", "Oneline string fields", "Text fields", 
+    string[] fieldsTypes = { "Integer fields", "Oneline string fields", "Text fields",
         "Boolean fields", "Date fields" };
 }
-<div>
-    @await Html.PartialAsync("_SelectLanguagePartial")
-</div>
-<h2 class="text-center m-4">@Localizer["Create new collection"]</h2>
-<form method="post" enctype="multipart/form-data">
-    <textarea rows="5" cols="60" asp-for="@Model.ShortDescription" 
-              placeholder="@Localizer["Short description"]"></textarea>
-    <br />
-    <div id="collection theme" class="mb-5">
-        <label class="text-center">@Localizer["Collection Theme"]:</label><br />
-        @{
-            foreach (var e in themes)
-            {
-                <input type="radio" asp-for="@Model.CollectionTheme" value="@e" />
-                @e
-                <br />
+<div class="container">
+    <h2 class="text-center m-4">@Localizer["Create new collection"]</h2>
+    <form method="post" enctype="multipart/form-data">
+        <textarea class="form-control" rows="5" cols="60" asp-for="@Model.ShortDescription"
+                  placeholder="@Localizer["Short description"]"></textarea>
+        <br />
+        <div id="collection theme" class="mb-5">
+            <label class="text-center">@Localizer["Collection Theme"]:</label><br />
+            @{
+                foreach (var e in themes)
+                {
+                    <input class="custom-radio" type="radio" asp-for="@Model.CollectionTheme" value="@e" />
+                    @e
+                    <br />
+                }
             }
-        }
-    </div>
-    <h3>@Localizer["Add additional fields"]</h3>
-    <div class="m-2">
-
-        @{
-
-            for (int i = 0; i < 15; i++)
-            {
-                if (i % 3 == 0)
+        </div>
+        <h3>@Localizer["Add additional fields"]</h3>
+        <div class="m-2">
+            @{
+                for (int i = 0; i < 15; i += 3)
                 {
                     <h4>@Localizer[fieldsTypes[i / 3]]</h4>
+                    <div class="row m-3">
+                        @for (int j = i; j < 15 && j < i + 3; j++)
+                        {
+                            <div class="col-md-4">
+                                <input class="form-control" type="text" asp-for="@Model.AdditionalFields[i]" />
+                            </div>
+                        }
+                    </div>
                 }
-                <input class="form-text" type="text" asp-for="@Model.AdditionalFields[i]" />
-                <br />
             }
+        </div>
+        <div class="m-3">
+            <label>@Localizer["Drop your image here"]р</label>
+            <input name="Image" type="file" class="form-control" />
+            @*<div id="uploadBlock" class="d-flex align-content-center justify-content-center"
+                     style="height:400px; width:400px; border:1px solid black">
+                    @Localizer["Drop your image here"]
+                </div>
+                <br />
+                <img id="imageUpload" src="~/bootstrap-icons/icons/eye-fill.svg" class="d-none" />*@
+        </div>
+        <button id="createButton" class="btn btn-primary" type="submit">@Localizer["Create new collection"]</button>
+    </form>
 
-        }
-    </div>
-    <div class="m-3">
-        <label>@Localizer["Drop your image here"]р</label>
-        <input name="Image" type="file" class="form-control" />
-        @*<div id="uploadBlock" class="d-flex align-content-center justify-content-center"
-                 style="height:400px; width:400px; border:1px solid black">
-                @Localizer["Drop your image here"]
-            </div>
-            <br />
-            <img id="imageUpload" src="~/bootstrap-icons/icons/eye-fill.svg" class="d-none" />*@
-    </div>
-    <button id="createButton" class="btn btn-primary" type="submit">@Localizer["Create new collection"]</button>
-</form>
+    @*@section scripts{
+            <script src="~/js/dragAndDrop.js">
 
-@*@section scripts{
-        <script src="~/js/dragAndDrop.js">
-
-        </script>
-    }*@
+            </script>
+        }*@
+</div>
