--- a/Collectors/Views/Collections/Edit.cshtml
+++ b/Collectors/Views/Collections/Edit.cshtml
@@ -8,41 +8,43 @@
 @model CollectionEditModel;
 
 <link rel="stylesheet" src="~/css/createCollection.css" />
-<div class="container contact-form">
-    <form method="post" enctype="multipart/form-data">
-        <h3 class="text-center">@Localizer["Editing your collection"]</h3>
-        <input asp-for="CollectionId" value="@Model.CollectionId" type="hidden" />
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <textarea rows="5" cols="60" asp-for="@Model.ShortDescription" placeholder="@Localizer["Modify the description"]"></textarea>
+<div class="container">
+    <div class="container contact-form">
+        <form method="post" enctype="multipart/form-data">
+            <h3 class="text-center">@Localizer["Editing your collection"]</h3>
+            <input asp-for="CollectionId" value="@Model.CollectionId" type="hidden" />
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <textarea rows="5" cols="60" asp-for="@Model.ShortDescription" placeholder="@Localizer["Modify the description"]"></textarea>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label>@Localizer["Current image"]:</label>
-                    @if (Model.OldImage != null)
-                    {
-                        <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.OldImage))" alt="@Localizer["View items"]" />
-                    }
-                    else
-                    {
-                        <p>
-                            @Localizer["Image not set"]
-                        </p>
-                    }
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>@Localizer["Current image"]:</label>
+                        @if (Model.OldImage != null)
+                        {
+                            <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.OldImage))" alt="@Localizer["View items"]" />
+                        }
+                        else
+                        {
+                            <p>
+                                @Localizer["Image not set"]
+                            </p>
+                        }
+                    </div>
                 </div>
-            </div>
 
-        </div>
-        <div class="form-group m-5">
-            <label>@Localizer["Change/Add the image of collection"]</label>
-            <input name="Image" type="file" class="form-control m-2" />
-            <button class="btn btn-primary" type="submit">@Localizer["Finish"]</button>
-            <button class="btn btn-primary" name="ShouldDeleteImage" value="true" type="submit">
-                @Localizer["Delete image and finish"]
-            </button>
-        </div>
-    </form>
-</div>
+            </div>
+            <div class="form-group m-5">
+                <label>@Localizer["Change/Add the image of collection"]</label>
+                <input name="Image" type="file" class="form-control m-2" />
+                <button class="btn btn-primary" type="submit">@Localizer["Finish"]</button>
+                <button class="btn btn-primary" name="ShouldDeleteImage" value="true" type="submit">
+                    @Localizer["Delete image and finish"]
+                </button>
+            </div>
+        </form>
+    </div>
+    </div>
