--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -3,35 +3,39 @@
 @using Markdig;
 @inject IViewLocalizer Localizer;
 @model Collection
-<div>
-    @await Html.PartialAsync("_SelectLanguagePartial")
+<div class="img">
+    <img src="~/img/8-TRACK-COLLECTION.jpg" alt="Snow" style="width:100%;">
+    <div class="centered">
+        <h1>@Localizer["Manage collections"]</h1>
+        <form>
+            <button class="btn-success" asp-action="Create">
+                @Localizer["add new collection"]
+            </button>
+        </form>
+    </div>
 </div>
-<h2>@Localizer["Manage collections"]</h2>
-<div class="toolbar mb-5 p-2 darkmode-ignore w-100" style="background-color:cornflowerblue">
-    <a asp-action="Create">
-        <img src="~/bootstrap-icons/icons/plus-circle.svg" />
-    </a>@Localizer["add new collection"]
-</div>
-<div class="align-content-center">
 
-    @{
-        foreach (var element in ViewBag.Collections)
-        {
+<div class="container">
+    <div class="align-content-center">
+        <div class="card-columns">
+            @{
+                foreach (var element in ViewBag.Collections)
+                {
 
-            <div class="card m-3 d-inline-block p-1 w-50 darkmode-ignore" style="background-color:cornflowerblue;">
-                    <form>
-                        <input class="btn-link" asp-for="Id" value="@element.Id" type="hidden" />
-                        <button type="submit" asp-action="Edit">
-                            <img src="~/bootstrap-icons/icons/pencil.svg" />
-                        </button>
+                    <div class="card m-3 d-inline-block p-1 bg-info">
+                        <form>
+                            <input class="btn-link" asp-for="Id" value="@element.Id" type="hidden" />
+                            <button class="btn-info" type="submit" asp-action="Edit">
+                                <img src="~/bootstrap-icons/icons/pencil.svg" />
+                            </button>
 
-                        <button class="btn-link" type="submit" asp-action="Delete">
-                            <img src="~/bootstrap-icons/icons/trash.svg" />
-                        </button>
-                        <button class="btn-link" type="submit" asp-action="Index" asp-controller="Items">
-                            <img src="~/bootstrap-icons/icons/eye.svg" />
-                        </button>
-                      
+                            <button class="btn-info" type="submit" asp-action="Delete">
+                                <img src="~/bootstrap-icons/icons/trash.svg" />
+                            </button>
+                            <button class="btn-info" type="submit" asp-action="Index" asp-controller="Items">
+                                <img src="~/bootstrap-icons/icons/eye.svg" />
+                            </button>
+
                             @if (element.Image != null)
                             {
                                 <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(element.Image))" alt="@Localizer["View items"]" />
@@ -41,13 +45,14 @@
                                 <img class="card-img-top" src="~/img/ImageNotSet.png" alt="@Localizer["View items"]" />
                             }
 
-                    </form>
-                <div class="card-body">
-                    <h5 class="card-title">Theme : @Enum.GetValues(typeof(CollectionTheme)).GetValue(element.ThemeId);</h5>
-                    @Html.Raw(Markdown.ToHtml(element.ShortDescription))
-                </div>
-            </div>
-        }
-    }
-
+                        </form>
+                        <div class="card-body">
+                            <h5 class="card-title">Theme : @Enum.GetValues(typeof(CollectionTheme)).GetValue(element.ThemeId);</h5>
+                            @Html.Raw(Markdown.ToHtml(element.ShortDescription))
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div>
 </div>
