--- a/Collectors/Views/Home/Index.cshtml
+++ b/Collectors/Views/Home/Index.cshtml
@@ -1,37 +1,47 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @using Collectors.Classes;
+@using Collectors.Data.Classes;
+@using Microsoft.AspNetCore.Identity
+@using Markdig;
+@inject UserManager<IdentityUser> UserManager;
 @inject IViewLocalizer Localizer;
 @{
     ViewData["Title"] = "Home Page";
 }
 @model StartModel;
-<div>
-    @await Html.PartialAsync("_SelectLanguagePartial")
-    @{
-        if (ViewBag.Role != null && ViewBag.Role[0] == "admin")
-        {
-            <a asp-action="Index" asp-controller="Admin">@Localizer["ManageUsers"]</a>
-        }
-    }
-</div>
+
 <div class="text-center">
-    <div id="carouselExampleControls" class="carousel slide bg-info p-4 w-100" data-ride="carousel">
-        <h3>Most interesing collections</h3>
+    <div id="carouselExampleControls" class="carousel slide w-100" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="center-block w-auto" src="~/img/coin-collection.jpg" alt="First slide" style="height:300px">
-            </div>
             @{
-                foreach (var collection in Model.BiggestCollections)
+                for (int i = 0; i < Model.BiggestCollections.Count; i++)
                 {
-                    if (collection.Image != null)
-                    {
-                        <div class="carousel-item">
-                            <img class="center-block w-auto" src="data:image/jpeg;base64,
-                             @(Convert.ToBase64String(collection.Image))"
-                                 alt="Second slide" style="height:300px">
+                    var collection = Model.BiggestCollections[i];
+                    string activeItemString = (i == 0) ? "active" : "";
+                        <div class="carousel-item @activeItemString">
+                            @if (collection.Image != null)
+                            {
+                                <img class="center-block w-100 h-auto" src="data:image/jpeg;base64,
+                                 @(Convert.ToBase64String(collection.Image))" alt="">
+                            }
+                            else
+                            {
+                                <img class="center-block w-100 h-auto" src="~/img/ImageNotSet.png" alt="">
+                            }
+                            <div class="centered">
+                                @if (ViewBag.Role != null && ViewBag.Role[0] == "admin")
+                                {
+                                    <form>
+                                        <button class="btn-success" asp-action="Index" asp-controller="Admin">
+                                        @Localizer["ManageUsers"]
+                                        </button>
+                                    </form>
+                                }
+
+                                <h1>Theme : @Enum.GetValues(typeof(CollectionTheme)).GetValue(collection.ThemeId)</h1>
+                                <div class="description">@Html.Raw(Markdown.ToHtml(collection.ShortDescription))</div>
+                            </div>
                         </div>
-                    }
                 }
             }
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -44,46 +54,45 @@
             </a>
         </div>
     </div>
-    <div class="col-md-6 float-left mt-4 mb-5">
-        @{
-            foreach (var item in Model.LatestItems)
-            {
-                <div class="card m-4 bg-info" style="width: 20rem;">
-                    <div class="card-body">
-                                <h5 class="card-title">@Html.ActionLink(item.Name, "Index", "Item", new { id = item.ItemId}, null)</h5>
-                        <p class="card-text">@item.Tags</p>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                     
-                        @foreach(var value in item.AdditionalFieldsValues)
-                        {
-                            if (!string.IsNullOrEmpty(value))
-                            {
-                                <li class="list-group-item">
-                                    @Html.Raw(value)
-                                </li>
-                            }
-                        }
-                    </ul>
-                </div>
-            }
-        }
-    </div>
-    <div class="col-md-6 float-right mt-4 mb-5" id="tagsCloud">
+    <div class="mb-5 darkmode-ignore bg-info" id="tagsCloud">
         <h4>@Localizer["Search items by tags"]</h4>
         <form asp-action="SearchTags" asp-controller="Home">
             @{
                 for (int i = 0; i < Model.Tags.Length; i++)
                 {
-                    <button type="submit" class="m-1 tags">@Model.Tags[i]</button>
+                    <button type="submit" class="m-1 tags bg-info">@Model.Tags[i]</button>
                 }
                 <input id="tagSearch" type="hidden" name="tag" />
             }
         </form>
     </div>
-   
+    <div class="mt-4 mb-5">
+        <div class="card-columns">
+            @{
+                foreach (var item in Model.LatestItems)
+                {
+                    <div class="card m-4 bg-info" style="width: 20rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">@Html.ActionLink(item.Name, "Index", "Item", new { id = item.ItemId }, null)</h5>
+                            <p class="card-text">@item.Tags</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            @foreach (var value in item.AdditionalFieldsValues)
+                            {
+                                if (!string.IsNullOrEmpty(value))
+                                {
+                                    <li class="list-group-item field">
+                                        @Html.Raw(value)
+                                    </li>
+                                }
+                            }
+                        </ul>
+                    </div>
+                }
+            }
+        </div>
+    </div>
 </div>
-
 @section scripts{
     <script src="~/js/tagsCloud.js"></script>
 }
