--- a/Collectors/Views/Items/Add.cshtml
+++ b/Collectors/Views/Items/Add.cshtml
@@ -3,75 +3,77 @@
 @using Collectors.Classes;
 @model ItemModel;
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
-<h2 class="text-center m-4">@SharedLocalizer["Add item to your collection"]</h2>
-<form method="post" class="needs-validation" novalidate>
-    <input asp-for="@Model.Tags" id="tags" value="@string.Join(',',ViewBag.Tags)" type="hidden" />
-    <input asp-for="CollectionId" value="@Model.CollectionId" type="hidden" />
-    <div class="form-row white">
-        <div class="col-md-4 mb-3">
-            <label>
-                @SharedLocalizer["Item name"]:
-            </label>
-            <input asp-for="@Model.Name" type="text" class="form-control" id="validationCustom01"
-                   placeholder="@SharedLocalizer["Item name"]" value="Name" required />
-            <div class="valid-feedback">
-                @SharedLocalizer["Looks good!"]
-            </div>
-        </div>
-        <div class="col-md-8 mb-3">
-            <label for="validationCustomTags">@SharedLocalizer["Add some tags for your item"]</label>
-            <input type="text" class="form-control mb-4 text-left w-100" name="input-custom-dropdown"
-                   placeholder="@SharedLocalizer["write tags here"]" value=""
-                   id="validationCustomTags" aria-describedby="inputGroupPrepend" required />
-            <div class="valid-feedback">
-                @SharedLocalizer["Looks good!"]
-            </div>
-            <div class="invalid-feedback">
-                @SharedLocalizer["choose a tags for your item"]
-            </div>
-        </div>
-    </div>
-    @{
-        for (int i = 0; i < Model.AdditionalFieldsNames.Count; i += 3)
-        {
-            <div class="form-row white">
-                @for (int j = i; j < i + 3 && j < Model.AdditionalFieldsNames.Count; j++)
-                {
-                    int index = Model.AdditionalFieldsIndexes[j];
-                    string name = FieldManager.GetTypeByIndex(index);
-                <div class="col-md-4 mb-3">
-                    <input asp-for="@Model.AdditionalFieldsIndexes[j]"
-                           value="@Model.AdditionalFieldsIndexes[j]" type="hidden"/>
-                    <label asp-for="@Model.AdditionalFieldsValues[j]">
-                        @Model.AdditionalFieldsNames[j]
-                    </label>
-                    @if (name != "textarea")
-                    {
-                        <input class="form-control m-2"
-                               asp-for="@Model.AdditionalFieldsValues[j]" type="@name" required/>
-                    }
-                    else
-                    {
-                        <textarea rows="5" cols="40" asp-for="@Model.AdditionalFieldsValues[j]"
-                                  class="form-control m-2" required></textarea>
-                    }
-                    <div class="valid-feedback">
-                        @SharedLocalizer["Looks good!"]
-                    </div>
-                    <div class="invalid-feedback">
-                        @SharedLocalizer["Field"] @Model.AdditionalFieldsNames 
-                        @SharedLocalizer["can't be empty"]
-                    </div>
+<div class="container">
+    <h2 class="text-center m-4">@SharedLocalizer["Add item to your collection"]</h2>
+    <form method="post" class="needs-validation" novalidate>
+        <input asp-for="@Model.Tags" id="tags" value="@string.Join(',',ViewBag.Tags)" type="hidden" />
+        <input asp-for="CollectionId" value="@Model.CollectionId" type="hidden" />
+        <div class="form-row white">
+            <div class="col-md-4 mb-3">
+                <label>
+                    @SharedLocalizer["Item name"]:
+                </label>
+                <input asp-for="@Model.Name" type="text" class="form-control" id="validationCustom01"
+                       placeholder="@SharedLocalizer["Item name"]" value="Name" required />
+                <div class="valid-feedback">
+                    @SharedLocalizer["Looks good!"]
                 </div>
-                }
             </div>
+            <div class="col-md-8 mb-3">
+                <label for="validationCustomTags">@SharedLocalizer["Add some tags for your item"]</label>
+                <input type="text" class="form-control mb-4 text-left w-100" name="input-custom-dropdown"
+                       placeholder="@SharedLocalizer["write tags here"]" value=""
+                       id="validationCustomTags" aria-describedby="inputGroupPrepend" required />
+                <div class="valid-feedback">
+                    @SharedLocalizer["Looks good!"]
+                </div>
+                <div class="invalid-feedback">
+                    @SharedLocalizer["choose a tags for your item"]
+                </div>
+            </div>
+        </div>
+        @{
+            for (int i = 0; i < Model.AdditionalFieldsNames.Count; i += 3)
+            {
+                <div class="form-row white">
+                    @for (int j = i; j < i + 3 && j < Model.AdditionalFieldsNames.Count; j++)
+                    {
+                        int index = Model.AdditionalFieldsIndexes[j];
+                        string name = FieldManager.GetTypeByIndex(index);
+                        <div class="col-md-4 mb-3">
+                            <input asp-for="@Model.AdditionalFieldsIndexes[j]"
+                                   value="@Model.AdditionalFieldsIndexes[j]" type="hidden" />
+                            <label asp-for="@Model.AdditionalFieldsValues[j]">
+                                @Model.AdditionalFieldsNames[j]
+                            </label>
+                            @if (name != "textarea")
+                            {
+                                <input class="form-control m-2"
+                                       asp-for="@Model.AdditionalFieldsValues[j]" type="@name" required />
+                            }
+                            else
+                            {
+                                <textarea rows="5" cols="40" asp-for="@Model.AdditionalFieldsValues[j]"
+                                          class="form-control m-2" required></textarea>
+                            }
+                            <div class="valid-feedback">
+                                @SharedLocalizer["Looks good!"]
+                            </div>
+                            <div class="invalid-feedback">
+                                @SharedLocalizer["Field"] @Model.AdditionalFieldsNames
+                                @SharedLocalizer["can't be empty"]
+                            </div>
+                        </div>
+                    }
+                </div>
+            }
         }
+        <button id="sentButton" asp-action="Index" class="btn btn-primary btn-sm" type="submit">
+            @SharedLocalizer["Finish"]
+        </button>
+    </form>
+    @section scripts{
+        <script src="~/js/tags.js"></script>
+        <script src="~/js/validate.js"></script>
     }
-    <button id="sentButton" asp-action="Index" class="btn btn-primary btn-sm" type="submit">
-        @SharedLocalizer["Finish"]
-    </button>
-</form>
-@section scripts{
-    <script src="~/js/tags.js"></script>
-    <script src="~/js/validate.js"></script>
-}
+</div>
