--- a/Collectors/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Collectors/Views/Shared/_SelectLanguagePartial.cshtml
@@ -16,7 +16,7 @@
 <form asp-controller="Home" asp-action="SetLanguage"
       asp-route-returnUrl="@Context.Request.Path"
       method="post" class="mt-2 form-horizontal">
-    @SharedLocalizer["Language"]: <select name="culture" onchange="this.form.submit();"
+    <label style="color:white">@SharedLocalizer["Language"]:</label> <select class="ml-2" name="culture" onchange="this.form.submit();"
                       asp-for="@requestCulture.RequestCulture.UICulture.Name"
                       asp-items="cultureItems"></select>
 </form>
